[package]
name = "ccwc-mh"
version = "0.1.0"
edition = "2024"
authors = ["Manmohan <manmohan.hunjan.mh@gmail.com>"]

description = "A CLI tool to count words, characters, and lines (WC clone in Rust)."
repository = "https://github.com/manmohanhunjan/ccwc"
homepage = "https://github.com/manmohanhunjan/ccwc"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
